--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,14 +10,16 @@
                 <div class="text-start">
                     <h3>Tabulator</h3>
                 </div>
-                <div class="text-end">
-                    <button type="button" class="btn btn-outline-info" id="go-btn">리스트화면 <br/> 이동</button>
-                </div>
+                <div class="text-end"></div>
             </div>
         </div>
         <div class="card-body">
             <div id="ckEditor-table">
                 Tabulator 사용에 대한 예시 프로젝트입니다.
+                <div class="card-body" style="margin-top: 10px">
+                    * 게시글 리스트 화면 이동
+                    <button type="button" class="btn btn-outline-info" id="go-btn">리스트화면 <br/> 이동</button>
+                </div>
             </div>
         </div>
 
