--- a/src/main/resources/templates/post/edit.html
+++ b/src/main/resources/templates/post/edit.html
@@ -54,7 +54,7 @@
     $(document).ready(function(){
       $("#list-btn").on("click", function(e){
         Util.confirm(`작성 정보가 저장되지 않을수도 있습니다. <br /> 목록으로 돌아가시겠습니까?`).then((isOk) => {
-          if(isOk) window.location.href = `/post/list`
+          if(isOk) window.location.href = `/post/list1`
         })
       })
 
@@ -70,7 +70,7 @@
             const obj = { 'title' : $("#title").val(),  'content': ckEditor.getData() }
 
             Http.put(`/api/post/${post['id']}`, obj).then((res) => {
-              if(res['httpStatus'] === 200)Util.alert(res.message).then(() => window.location.href = `/post/list`)
+              if(res['httpStatus'] === 200)Util.alert(res.message).then(() => window.location.href = `/post/list1`)
             })
           }
         }
