--- a/src/main/resources/templates/post/new.html
+++ b/src/main/resources/templates/post/new.html
@@ -53,7 +53,7 @@
     $(document).ready(function(){
       $("#list-btn").on("click", function(e){
         Util.confirm(`작성 정보가 저장되지 않을수도 있습니다. <br /> 목록으로 돌아가시겠습니까?`).then((isOk) => {
-          if(isOk) window.location.href = `/post/list`
+          if(isOk) window.location.href = `/post/list1`
         })
       })
 
@@ -69,7 +69,7 @@
             const obj = { 'title' : $("#title").val(),  'content': ckEditor.getData() }
 
             Http.post(`/api/post`, obj).then((res) => {
-              if(res['httpStatus'] === 200)Util.alert("저장되었습니다.").then(() => window.location.href = `/post/list`)
+              if(res['httpStatus'] === 200) Util.alert("저장되었습니다.").then(() => window.location.href = `/post/list1`)
             })
           }
         }
