--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@
                 Tabulator 사용에 대한 예시 프로젝트입니다.
                 <div class="card-body" style="margin-top: 10px">
                     (1) 게시글 리스트 화면 이동 - 1
-                    <button type="button" class="btn btn-outline-info" style="margin-left: 20px" id="go-btn1">리스트화면 이동1</button>
+                    <button type="button" class="btn btn-outline-info" style="margin-left: 20px; margin-bottom: 10px" id="go-btn1">리스트화면 이동1</button>
                     <div>
                         <span style="color: red">* 테뷸레이터 이용: rowClick, formatter</span>
                     </div>
@@ -28,9 +28,9 @@
 
                 <div class="card-body" style="margin-top: 10px">
                     (2) 게시글 리스트 화면 이동 - 2
-                    <button type="button" class="btn btn-outline-info" style="margin-left: 20px" id="go-btn2">리스트화면 이동2</button>
+                    <button type="button" class="btn btn-outline-info" style="margin-left: 20px; margin-bottom: 10px" id="go-btn2">리스트화면 이동2</button>
                     <div>
-                        <span style="color: red">* 테뷸레이터 이용: selectable, formatter, local-data</span>
+                        <span style="color: red">* 테뷸레이터 이용: selectable, formatter, local-data, selectAll, deSelectAll</span>
                     </div>
                 </div>
             </div>
