--- a/src/main/resources/templates/post/index3.html
+++ b/src/main/resources/templates/post/index3.html
@@ -8,14 +8,11 @@
         <div class="card-header" style="margin-bottom: 10px">
             <div class="card-text d-flex justify-content-between">
                 <div class="text-start">
-                    <h3>Tabulator 2</h3>
+                    <h3>Tabulator 3</h3>
                 </div>
                 <div class="text-end">
                     <button type="button" class="btn btn-outline-secondary" id="main-btn">메인화면이동</button>
-                    <button type="button" class="btn btn-outline-info" id="new-btn">글작성하기</button>
-                    <button type="button" class="btn btn-outline-danger" id="del-btn">삭제하기</button>
-                    <button type="button" class="btn btn-outline-warning" id="all-btn-chk">전체선택</button>
-                    <button type="button" class="btn btn-outline-dark" id="all-btn-nonChk">전체선택해제</button>
+                    <button type="button" class="btn btn-outline-danger" id="del-btn">테이블 초기화</button>
                 </div>
             </div>
         </div>
@@ -28,29 +25,35 @@
 <th:block layout:fragment="script">
     <script th:inline="javascript">
         const table = new Table("tabulator-table", false)
-        const list = /*[[${list}]]*/ []
+        let list = [{index: 0, title: "제목", answers: []}]
 
         table
+            .setPlaceholder("데이터가 0건입니다.")
             .setData(list)
-            .selectable()
             .add(new Column("index").title("#").width("15%").center())
             .add(new Column("title").title("제목").width("30%"))
             .add(new Column("answers").title("답변").width("20%").center().formatter(function (cell) {
                 return `<b>${cell.getData().answers.length}개</b>`
             }))
+            .rowFormatter((row) => {
+                console.log('row: ', row.getData())                     // 해당 row 데이터 가져오기
+                console.log('row: ', row.getElement())                  // 해당 row element 가져오기
+                row.getElement().style.backgroundColor = "#e0b4b4";     // -> 다음과 같이 customizing 가능
+            })
             .init()
 
-
-        $("#all-btn-chk").on('click', () => table.selectAll())
-        $("#all-btn-nonChk").on('click', () => table.deSelectAll())
-        $("#new-btn").on('click', () => window.location.href = '/post/new')
-        $("#main-btn").on('click', () => window.location.href = '/')
-        $("#del-btn").on('click', function (e) {
-            const queryString = '?' + table.getSelectedRows().map((item) => 'ids=' + item.id).join('&');
-            Http.delete(`/api/posts${queryString}`).then((res) => {
-                if(res['httpStatus'] === 200) Util.alert(res.message).then(() => window.location.href = `/post/list2`)
-            })
+        table.afterComplete(() => {
+            console.log("table is completely drawn !")
         })
+
+        table.rowClick((data, row) => {
+            console.log("table row is clicked")
+            console.log("* data: ", data)
+            console.log("* row: ", row)
+        })
+
+        $("#main-btn").on('click', () => window.location.href = '/')
+        $("#del-btn").on('click', () => table.submit([]))
 
     </script>
 </th:block>
