--- a/src/main/resources/templates/post/new.html
+++ b/src/main/resources/templates/post/new.html
@@ -16,7 +16,7 @@
       <div class="card-header" style="margin-bottom: 10px">
         <div class="card-text d-flex justify-content-between">
           <div class="text-start">
-            <h3 text="새로운 글 작성하기"></h3>
+            <h3>새로운 글 작성하기</h3>
           </div>
           <div class="text-end">
             <button type="submit" class="btn btn-outline-info" id="save-btn">저장</button>
