commit10 : 테뷸레이터 다른 경우 적용 4

--- a/src/main/resources/templates/post/index1.html
+++ b/src/main/resources/templates/post/index1.html
@@ -33,9 +33,9 @@
                 const rowData = cell.getData()
                 return `<b>${rowData['title']}</b>`
             }))
+            .rowClick((data, row) => window.location.href = `/post/view/${data['id']}`)
             .init()
 
-        table.rowClick((data, row) => window.location.href = `/post/view/${data['id']}`)
         $("#new-btn").on('click', () => window.location.href = '/post/new')
         $("#main-btn").on('click', () => window.location.href = '/')
     </script>
