--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,7 +40,7 @@
                     (3) 게시글 리스트 화면 이동 - 3
                     <button type="button" class="btn btn-outline-info" style="margin-left: 20px; margin-bottom: 10px" id="go-btn3">리스트화면 이동3</button>
                     <div>
-                        <span style="color: red">* 테뷸레이터 이용: formatter, setPlaceholder, rowFormatter, local-data, afterComplete, rowClick, local-data submit</span>
+                        <span style="color: red">* 테뷸레이터 이용: setPlaceholder, rowFormatter, local-data, afterComplete, rowClick, local-data submit, add local-data</span>
                     </div>
                 </div>
 
