--- a/src/main/resources/templates/post/index1.html
+++ b/src/main/resources/templates/post/index1.html
@@ -29,9 +29,11 @@
         table
             .get('/api/post-answer')
             .add(new Column("index").title("#").width("15%").center())
-            .add(new Column("title").title("제목").width("30%").left().formatter(function(cell) {
+            .add(new Column("title").title("제목").width("30%").left())
+            .add(new Column("delYn").title("삭제여부").width("20%").center().formatter(function(cell) {
                 const rowData = cell.getData()
-                return `<b>${rowData['title']}</b>`
+                if(rowData['delYn'] === 'Y') return `<span style="color: red">삭제됨</span>`
+                else return `<span style="color: blue">삭제안됨</span>`
             }))
             .rowClick((data, row) => window.location.href = `/post/view/${data['id']}`)
             .init()
