--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -44,6 +44,16 @@
                     </div>
                 </div>
 
+                <hr />
+
+                <div class="card-body" style="margin-top: 10px">
+                    (4) 게시글 리스트 화면 이동 - 4
+                    <button type="button" class="btn btn-outline-info" style="margin-left: 20px; margin-bottom: 10px" id="go-btn4">리스트화면 이동4</button>
+                    <div>
+                        <span style="color: red">* 테뷸레이터 이용: -</span>
+                    </div>
+                </div>
+
             </div>
         </div>
 
