--- a/src/main/resources/templates/post/index3.html
+++ b/src/main/resources/templates/post/index3.html
@@ -55,6 +55,11 @@
             .setData(list)
             .add(new Column("index").title("#").width("15%").center())
             .add(new Column("title").title("제목").width("30%").left())
+            .add(new Column("delYn").title("삭제여부").width("20%").center().formatter(function(cell) {
+                const rowData = cell.getData()
+                if(rowData['delYn'] === 'Y') return `<span style="color: red">삭제됨</span>`
+                else return `<span style="color: blue">삭제안됨</span>`
+            }))
             .add(new Column("name").title("답변").width("20%").left())
             .rowFormatter((row) => {
                 console.log('row: ', row.getData())                     // 해당 row 데이터 가져오기
