--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -50,7 +50,7 @@
                     (4) 게시글 리스트 화면 이동 - 4
                     <button type="button" class="btn btn-outline-info" style="margin-left: 20px; margin-bottom: 10px" id="go-btn4">리스트화면 이동4</button>
                     <div>
-                        <span style="color: red">* 테뷸레이터 이용: -</span>
+                        <span style="color: red">* 테뷸레이터 이용: setPlaceholder, rowFormatter, local-data, afterComplete, local-data submit</span>
                     </div>
                 </div>
 
@@ -65,5 +65,6 @@
         $("#go-btn1").on("click", () => window.location.href = '/post/list1')
         $("#go-btn2").on("click", () => window.location.href = '/post/list2')
         $("#go-btn3").on("click", () => window.location.href = '/post/list3')
+        $("#go-btn4").on("click", () => window.location.href = '/post/list4')
     </script>
 </th:block>
