--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -54,6 +54,16 @@
                     </div>
                 </div>
 
+                <hr />
+
+                <div class="card-body" style="margin-top: 10px">
+                    (5) 게시글 리스트 화면 이동 - 5
+                    <button type="button" class="btn btn-outline-info" style="margin-left: 20px; margin-bottom: 10px" id="go-btn5">리스트화면 이동5</button>
+                    <div>
+                        <span style="color: red">* 테뷸레이터 이용: colspan</span>
+                    </div>
+                </div>
+
             </div>
         </div>
 
@@ -66,5 +76,6 @@
         $("#go-btn2").on("click", () => window.location.href = '/post/list2')
         $("#go-btn3").on("click", () => window.location.href = '/post/list3')
         $("#go-btn4").on("click", () => window.location.href = '/post/list4')
+        $("#go-btn5").on("click", () => window.location.href = '/post/list5')
     </script>
 </th:block>
