commit15 : js 파일 묶기

--- a/src/main/resources/templates/fragments/script.html
+++ b/src/main/resources/templates/fragments/script.html
@@ -3,8 +3,6 @@
     <script th:src="@{'/assets/js/bootstrap/bootstrap.bundle.min.js'}"></script>
     <script th:src="@{'/assets/js/table/tabulator.min.js'}"></script>
     <script th:src="@{'/assets/js/sweetalert2/sweetalert2.js'}"></script>
-    <script th:src="@{'/assets/js/core/util.js'}"></script>
-    <script th:src="@{'/assets/js/core/tabulator.js'}"></script>
+    <script th:src="@{'/assets/js/core/hongTabulator.min.js'}"></script>
     <script th:src="@{'/assets/js/ckeditor/ckeditor-37.0.1.js'}"></script>
-    <script th:src="@{'/assets/js/ckeditor/MyUploadAdapter.js'}"></script>
 </th:block>
